<?xml version="1.0" encoding="utf-8"?><!--Start main Layout-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:game="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".GameView04">

    <!--Start Relative1-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Spacer Header1 -->
        <TextView
            android:id="@+id/textView_header1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/violet" />

        <!--Spacer 1, Left of Level -->
        <TextView
            android:id="@+id/textView_blank1"
            android:layout_width="30dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />

        <!--Level title -->
        <TextView
            android:id="@+id/textView_level4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textView_blank1"
            android:layout_toRightOf="@id/textView_blank1"
            android:paddingTop="10dp"
            android:text="@string/L04"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <!--Spacer 2, Right of Pause -->
        <TextView
            android:id="@+id/textView_blank2"
            android:layout_width="30dp"
            android:layout_height="75dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <!--Pause button -->
        <ImageButton
            android:id="@+id/button_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/textView_blank2"
            android:layout_toLeftOf="@id/textView_blank2"
            android:background="@color/transparent"
            android:contentDescription="@string/pause"
            android:onClick="pauseMenu"
            android:paddingTop="7dp"
            android:paddingBottom="5dp"
            android:src="@drawable/ic_baseline_pause" />

        <!--Spacer Header2 -->
        <TextView
            android:id="@+id/textView_header2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignBottom="@id/textView_blank2"
            android:background="@color/violet" />
    </RelativeLayout>
    <!--End Relative1-->

    <!--Start Linear1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                game:layout_constraintGuide_begin="10dp"
                game:layout_constraintGuide_end="10dp" />

            <ImageButton
                android:id="@+id/button_01"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/incorrect"
                android:onClick="openGameOver"
                android:src="@drawable/indigo1"
                game:layout_constraintBottom_toBottomOf="parent"
                game:layout_constraintEnd_toStartOf="@+id/button_02"
                game:layout_constraintHorizontal_bias=".5"
                game:layout_constraintStart_toStartOf="parent"
                game:layout_constraintTop_toTopOf="@+id/guidelineA"
                game:layout_constraintVertical_bias=".5" />

            <ImageButton
                android:id="@+id/button_02"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/correct"
                android:src="@drawable/orange1"
                game:layout_constraintBottom_toBottomOf="parent"
                game:layout_constraintEnd_toEndOf="parent"
                game:layout_constraintHorizontal_bias=".5"
                game:layout_constraintTop_toTopOf="@+id/guidelineA"
                game:layout_constraintVertical_bias=".5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <!--End Linear1-->

    <!--Start Linear2-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                game:layout_constraintGuide_begin="10dp" />

            <ImageButton
                android:id="@+id/button_11"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginEnd="220dp"
                android:layout_marginRight="220dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/incorrect"
                android:onClick="openGameOver"
                android:src="@drawable/blue1"
                game:layout_constraintBottom_toBottomOf="parent"
                game:layout_constraintEnd_toEndOf="parent"
                game:layout_constraintHorizontal_bias=".5"
                game:layout_constraintTop_toTopOf="@+id/guidelineB"
                game:layout_constraintVertical_bias=".5" />

            <ImageButton
                android:id="@+id/button_12"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/incorrect"
                android:onClick="openGameOver"
                android:src="@drawable/red1"
                game:layout_constraintBottom_toBottomOf="parent"
                game:layout_constraintEnd_toEndOf="parent"
                game:layout_constraintTop_toTopOf="@+id/guidelineB" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <!--End Linear2-->

    <!--Start Relative2-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Spacer Footer1 -->
        <TextView
            android:id="@+id/textView_footer1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/violet" />

        <!--Spacer 3, Left of Timer -->
        <TextView
            android:id="@+id/textView_blank3"
            android:layout_width="30dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />

        <!--[PLACEHOLDER] Timer-->
        <TextView
            android:id="@+id/timerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textView_blank3"
            android:layout_toRightOf="@id/textView_blank3"
            android:paddingTop="5dp"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <!--Spacer 4, Right of Color Icon -->
        <TextView
            android:id="@+id/textView_blank4"
            android:layout_width="30dp"
            android:layout_height="75dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <!--Color Icon Image -->
        <ImageView
            android:id="@+id/imageView_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/textView_blank4"
            android:layout_toLeftOf="@id/textView_blank4"
            android:background="@color/transparent"
            android:contentDescription="@string/match"
            android:paddingTop="10dp"
            android:src="@drawable/orange_footer" />

        <!--Progress/Timer Bar -->

    </RelativeLayout>
    <!--End Relative2-->

</LinearLayout><!--End of Main Layout-->





