<?xml version="1.0" encoding="utf-8"?><!--Start main Layout-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".GameView07">

    <!--Start Relative1-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Spacer Header1 -->
        <TextView
            android:id="@+id/textView_header1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/violet" />

        <!--Spacer 1, Left of Level -->
        <TextView
            android:id="@+id/textView_blank1"
            android:layout_width="30dp"
            android:layout_height="75dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <!--Level title -->
        <TextView
            android:id="@+id/textView_level5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textView_blank1"
            android:paddingTop="10dp"
            android:text="@string/L07"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:layout_toEndOf="@id/textView_blank1" />

        <!--Spacer 2, Right of Pause -->
        <TextView
            android:id="@+id/textView_blank2"
            android:layout_width="30dp"
            android:layout_height="75dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <!--Pause button -->
        <ImageButton
            android:id="@+id/button_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/textView_blank2"
            android:background="@color/transparent"
            android:onClick="pauseMenu"
            android:paddingTop="7dp"
            android:paddingBottom="5dp"
            android:src="@drawable/ic_baseline_pause"
            android:layout_toStartOf="@id/textView_blank2" />

        <!--Spacer Header2 -->
        <TextView
            android:id="@+id/textView_header2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignBottom="@id/textView_blank2"
            android:background="@color/violet" />
    </RelativeLayout>
    <!--End Relative1-->

    <!--Start Linear1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/button_01"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:src="@drawable/violet1"
            android:contentDescription="@string/correct" />


        <ImageButton
            android:id="@+id/button_02"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:onClick="openGameOver"
            android:src="@drawable/red1"
            android:contentDescription="@string/incorrect" />

    </LinearLayout>
    <!--End Linear1-->

    <!--Start Linear2-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/button_11"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:src="@drawable/violet1"
            android:contentDescription="@string/correct" />

        <ImageButton
            android:id="@+id/button_12"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:onClick="openGameOver"
            android:src="@drawable/blue1"
            android:contentDescription="@string/incorrect" />
    </LinearLayout>
    <!--End Linear2-->

    <!--Start Linear2-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/button_21"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:onClick="openGameOver"
            android:src="@drawable/yellow1"
            android:contentDescription="@string/incorrect" />

        <ImageButton
            android:id="@+id/button_22"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:onClick="openGameOver"
            android:src="@drawable/red1"
            android:contentDescription="@string/incorrect" />
    </LinearLayout>
    <!--End Linear2-->


    <!--Start Relative2-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Spacer Footer1 -->
        <TextView
            android:id="@+id/textView_footer1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/violet" />

        <!--Spacer 3, Left of Timer -->
        <TextView
            android:id="@+id/textView_blank3"
            android:layout_width="30dp"
            android:layout_height="75dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <!--[PLACEHOLDER] Timer-->
        <TextView
            android:id="@+id/timerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textView_blank3"
            android:paddingTop="5dp"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:layout_toEndOf="@id/textView_blank3" />

        <!--Spacer 4, Right of Color Icon -->
        <TextView
            android:id="@+id/textView_blank4"
            android:layout_width="30dp"
            android:layout_height="75dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <!--Color Icon Image -->
        <ImageView
            android:id="@+id/imageView_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/textView_blank4"
            android:background="@color/transparent"
            android:paddingTop="10dp"
            android:src="@drawable/violet_footer"
            android:contentDescription="@string/match"
            android:layout_toStartOf="@id/textView_blank4" />

        <!--Progress/Timer Bar -->

    </RelativeLayout>
    <!--End Relative2-->

</LinearLayout><!--End of Main Layout-->





