<?xml version="1.0" encoding="utf-8"?><!--Start main Layout-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".GameView25">

    <!--Start Relative1-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Spacer Header1 -->
        <TextView
            android:id="@+id/textView_header1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/blue" />

        <!--Spacer 1, Left of Level -->
        <TextView
            android:id="@+id/textView_blank1"
            android:layout_width="30dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />

        <!--Level title -->
        <TextView
            android:id="@+id/textView_level29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textView_blank1"
            android:layout_toRightOf="@id/textView_blank1"
            android:paddingTop="10dp"
            android:text="@string/L29"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <!--Spacer 2, Right of Pause -->
        <TextView
            android:id="@+id/textView_blank2"
            android:layout_width="30dp"
            android:layout_height="75dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <!--Pause button -->
        <ImageButton
            android:id="@+id/button_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/textView_blank2"
            android:layout_toLeftOf="@id/textView_blank2"
            android:background="@color/transparent"
            android:contentDescription="@string/pause"
            android:onClick="pauseMenu"
            android:paddingTop="7dp"
            android:paddingBottom="5dp"
            android:src="@drawable/ic_baseline_pause" />

        <!--Spacer Header2 -->
        <TextView
            android:id="@+id/textView_header2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignBottom="@id/textView_blank2"
            android:background="@color/blue" />
    </RelativeLayout>
    <!--End Relative1-->

    <!--Start Linear1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/button_01"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/incorrect"
            android:onClick="openGameOver"
            android:src="@drawable/red1" />


        <ImageButton
            android:id="@+id/button_02"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/incorrect"
            android:src="@drawable/green1" />

        <ImageButton
            android:id="@+id/button_03"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/correct"
            android:src="@drawable/green1" />
    </LinearLayout>
    <!--End Linear1-->

    <!--Start Linear2-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/button_11"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/correct"
            android:src="@drawable/green1" />

        <ImageButton
            android:id="@+id/button_12"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/incorrect"
            android:onClick="openGameOver"
            android:src="@drawable/blue1" />

        <ImageButton
            android:id="@+id/button_13"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/incorrect"
            android:src="@drawable/green1" />
    </LinearLayout>
    <!--End Linear2-->

    <!--Start Linear3-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/button_21"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/incorrect"
            android:onClick="openGameOver"
            android:src="@drawable/yellow1" />

        <ImageButton
            android:id="@+id/button_22"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/incorrect"
            android:onClick="openGameOver"
            android:src="@drawable/violet1" />

        <ImageButton
            android:id="@+id/button_23"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/incorrect"
            android:src="@drawable/green1" />
    </LinearLayout>
    <!--End Linear3-->

    <!--Start Linear4-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/button_31"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/incorrect"
            android:src="@drawable/green1" />

        <ImageButton
            android:id="@+id/button_32"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/incorrect"
            android:src="@drawable/green1" />

        <ImageButton
            android:id="@+id/button_33"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/incorrect"
            android:onClick="openGameOver"
            android:src="@drawable/red1" />
    </LinearLayout>
    <!--End Linear4-->


    <!--Start Relative2-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Spacer Footer1 -->
        <TextView
            android:id="@+id/textView_footer1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/blue" />

        <!--Spacer 3, Left of Timer -->
        <TextView
            android:id="@+id/textView_blank3"
            android:layout_width="30dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />

        <!--[PLACEHOLDER] Timer-->
        <TextView
            android:id="@+id/timerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textView_blank3"
            android:layout_toRightOf="@id/textView_blank3"
            android:paddingTop="5dp"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <!--Spacer 4, Right of Color Icon -->
        <TextView
            android:id="@+id/textView_blank4"
            android:layout_width="30dp"
            android:layout_height="75dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <!--Color Icon Image -->
        <ImageView
            android:id="@+id/imageView_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/textView_blank4"
            android:layout_toLeftOf="@id/textView_blank4"
            android:background="@color/transparent"
            android:contentDescription="@string/match"
            android:paddingTop="10dp"
            android:src="@drawable/green_footer" />

        <!--Progress/Timer Bar -->

    </RelativeLayout>
    <!--End Relative2-->

</LinearLayout><!--End of Main Layout-->





